feat: template spec and basic add feature
