# momentum-core/config/endpoints.go
@@ -17,3 +17,7 @@ const API_TEMPLATES_PREFIX = API_VERSION_BETA + "/templates"
 const API_TEMPLATES_APPLICATIONS = API_TEMPLATES_PREFIX + "/applications"
 const API_TEMPLATES_STAGES = API_TEMPLATES_PREFIX + "/stages"
 const API_TEMPLATES_DEPLOYMENTS = API_TEMPLATES_PREFIX + "/deployments"
+const API_TEMPLATES_ADD = API_TEMPLATES_PREFIX
+const API_TEMPLATES_SPEC_PREFIX = API_TEMPLATES_PREFIX + "/spec"
+const API_TEMPLATE_GET_SPEC = API_TEMPLATES_SPEC_PREFIX + "/:templateName"
+const API_TEMPLATE_APPLY = API_TEMPLATES_SPEC_PREFIX + "/apply/:anchorArtefactId"
