# momentum-core/templates/model.go
@@ -24,30 +24,36 @@ type TemplateFile struct {
 	TemplateBody string `json:"templateBody"` // base64 encoded
 }
 
+type TemplateConfig struct {
+	Kind     TemplateKind `json:"kind" yaml:"kind"`
+	Children []string     `json:"children" yaml:"children"`
+}
+
 type CreateTemplateRequest struct {
 	TemplateKind TemplateKind `json:"templateKind"`
 	// the toplevel directories name is the name of the template
 	Template        *TemplateDir                `json:"template"`
-	Children        *Template                   `json:"children"`
-	OverwriteConfig *overwrites.OverwriteConfig `json:"overwriteConfig"`
+	TemplateConfig  *TemplateConfig             `json:"templateConfig"`
+	OverwriteConfig *overwrites.OverwriteConfig `json:"-"` // `json:"overwriteConfig"` // TODO: implemented later
 }
 
 type Template struct {
 	// be aware, that each template must have an unique name
 	// it doesn't matter if they are of different template kind
-	TemplateName string       `json:"templateName"`
-	TemplateKind TemplateKind `json:"templateKind"`
-	Template     *files.Dir   `json:"template"`
+	Name string       `json:"name"`
+	Kind TemplateKind `json:"kind"`
+	Root *files.Dir   `json:"root"`
 	// The children are templates which are contained within the template.
 	Children []*Template `json:"children"`
 }
 
 type TemplateSpec struct {
+	Template   *Template    `json:"template"`
 	ValueSpecs []*ValueSpec `json:"valueSpecs"`
 }
 
 type ValueSpec struct {
-	TemplateId string `json:"templateId"` // id of the template which the value belongs to
-	Name       string `json:"name"`       // name of the value (name displayed in frontend)
-	Value      string `json:"value"`      // the value assigned
+	TemplateName string `json:"templateName"` // name of the template which the value belongs to
+	Name         string `json:"name"`         // name of the value (name displayed in frontend)
+	Value        string `json:"value"`        // the value assigned
 }
